chore: update resources